Flukes Release Notes:
---------------------
10/27/16:
- Added support for slice stitching, see ExoBlog

05/27/16:
- Added support for multiple resource types 

12/18/15:
- Made reading requests from file less strict 

11/15/15:
- Added coloring of node status

09/25/15:
- Added support for slice modify

09/22/15:
- Added support for polling for manifest

08/27/15:
- Added ability to send problem report emails
- Modified the look of slice status view

08/06/15:
- Added color-coding of Twitter posts

07/30/15:
- Added resource availability query to request view

07/28/15:
- Added simple Twitter support and sorted out access to registry

04/14/15:
- Added another type of PEM-encoded private key

03/31/15:
- Fixed the date parsing issue with extend with SA

03/09/15:
- Addded support for GWU and CIENA racks, removed old size definitions

02/25/15:
- Added support for new-style stitchport definitions

02/20/15:
- Updated semantic verification ruleset in NDL Commons

02/03/15:
- Fixes for storage properties loaded from previously saved request file

12/2/14:
- Fixed long standing image name bug in manifest display

09/08/14:
- Separated BC provider into a JNLP extension

09/05/14:
- Moved to 5.0 ORCA artifacts

08/22/14:
- Added the ability to query for node unit properties (to e.g. get the boot console)

07/22/14:
- Trim user-provided properties to ensure no extra whitespaces

06/18/14:
- Added TAMU, WSU, UMass, UAF and PSC

03/31/14:
- Added NCSU2 net

03/05/14:
- Added WVN, NCSU, NCSU2 racks

02/26/14:
- Updated to support fixes to CH API

02/19/14:
- Added support for Federation Slice authority and GENI Portal (see Help)

02/13/14:
- Updated path search algorithm

1/28/14:
- Enabled support for color extension

11/15/13:
- Renamed SL to starlight to support SL site

11/15/13:
- Modified to support broadcast connections with common links

10/17/13:
- Added new racks (UFL, SL, OSF, UCD)

10/10/13:
- Added explicit 'No dependencies' option to node dependencies field
